# Revamped-Minecraft-Generation

./: .gitignore  CMakeLists.txt  README.md  notes.txt
assets/blocks/plains/gimp/: flower1.xcf  flower2.xcf  grass1.xcf  grass2.xcf  tree1.xcf  tree2.xcf
assets/blocks/rocks/gimp/: rock.xcf
assets/blocks/sand/gimp/: sand.xcf
assets/blocks/water/gimp/: water1.xcf  water2.xcf
assets/sprites/gimp/: cursor.xcf
src/: CMakeLists.txt  globvars.cpp  globvars.h  main.cpp
src/grid_system/: Block.cpp  Block.h  grid.cpp  grid.h  grid_system.cpp
src/grid_system/tests/: grid_test.cpp
src/keybinds/: keybinds.cpp  keybinds.h
src/particle/: particle.cpp  particle.h
src/particle/tests/: particles_test.cpp
src/utils/: directory.h
src/utils/directory/: directory.cpp
src/utils/vector_utils/: vector_utils.cpp  vector_utils.h
src/utils/vector_utils/tests/: vector_utils_test.cpp
